--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 
-diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
+diesel = { version = "^1.1.0", features = ["sqlite", "r2d2", "chrono"] }
 r2d2 = "0.8"
 dotenv = "0.10"
+chrono = { version = "0.4", features = ["serde"] }
 
 juniper = "0.9.2"
